--- a/ativebac.html
+++ b/ativebac.html
@@ -8,12 +8,12 @@
 <body>
     <h1>Formulario de cadastro</h1>
     <form>
-        <label for="text">Nome</label>
-        <input type="text"><br>
-        <label for="text">E-mail </label>
-        <input type="text"><br>
+        <label for="Nome">Nome</label>
+        <input type="text" id="Nome" name="Nome" required><br>
+        <label for="email">E-mail</label>
+        <input type="email" name="email" id="email" required><br>
         <label for="text">Senha</label>
-        <input type="password" name="" id=""><br>
+        <input type="password" name="Senha" id="Senha" required><br>
         <button type="submit">
             Enviar
         </button>
