--- a/css/index2.html
+++ b/css/index2.html
@@ -20,6 +20,12 @@
                 <li>
                     <a href="#economy" title="Ir para a seção de notícias">Economia</a>
                 </li>
+                <li>
+                    <a href="#games" title="Ir para seção games">Games</a>
+                </li>
+                <li>
+                    <a href="#tecnologia" title="Ir para seção tecnologia">Tecnologia</a>
+                </li>
             </ul>
         </nav>
         </div>
@@ -45,17 +51,6 @@
                         <time>13/07/2022 às 12:35</time>
                     </header>
                     <h3>Noite do Superbowl</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
-                    </p>
-                    <a href="#" title="Leia a notícia completa">Ler mais</a>
-                </article>
-                <article>
-                    <img src="./imagens/basquete.jpg" title="Vista aérea de uma quadra de basquete" />
-                    <header>
-                        <time>13/07/2022 às 12:35</time>
-                    </header>
-                    <h3>Notícia sobre a NBA</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
                     </p>
@@ -109,6 +104,86 @@
                     <h3>Alta no preço do barril do petróleo</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section id="games">
+        <div id="container">
+            <h2>Games</h2>
+            <div class="articles">
+                <article>
+                    <img src="./imagens/baldurgates.jpg" alt="baldur gates 3" />
+                    <header>
+                        <time>08/09/2023 às 19:29</time>
+                    </header>
+                    <h3>Baldur gates jogo do ano?</h3>
+                    <p>
+                        Baldur's Gate é uma série de jogos de RPG de fantasia. O terceiro título, Baldur's Gate 3, promete uma experiência épica e imersiva, com gráficos impressionantes e uma narrativa envolvente. Os jogadores exploram um mundo rico, enfrentam monstros e tomam decisões que moldam a história enquanto buscam desvendar mistérios e segredos.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/ocelot.jpg" alt="new hero" />
+                    <header>
+                        <time>08/09/2023 às 19:35</time>
+                    </header>
+                    <h3>For Honor Novo Herói Ocelotl Y7S2</h3>
+                    <p>
+                        Ocelotl, do Império Asteca, são caçadores habilidosos com nome significando 'Guerreiro Onça' em Nahuatl. Caçam pacientemente e atacam rapidamente, usando clube macuahuitl e lança tepoztopilli. São lutadores ferozes que nunca esquecem um desafio, destacando-se por eficiência e calculismo em combate.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/starfiel.jpg" alt="Starfield" />
+                    <header>
+                        <time>08/09/2023 às 19:41</time>
+                    </header>
+                    <h3>Starfield em day one no gamepass</h3>
+                    <p>
+                        Starfield é o novo universo da Bethesda Game Studios após 25 anos, famosos por Skyrim e Fallout 4. Oferece liberdade total na criação de personagens e exploração, enquanto os jogadores embarcam em uma jornada épica para resolver o maior mistério da humanidade
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section id="tecnologia">
+        <div id="container">
+            <h2>Tecnologia</h2>
+            <div class="articles">
+                <article>
+                    <img src="./imagens/galaxyfold5.jpg" alt="galaxy Fold 5" />
+                    <header>
+                        <time>13/07/2022 às 12:35</time>
+                    </header>
+                    <h3>Samsung Galaxy Z Fold5 5G</h3>
+                    <p>
+                        Potência de computador, agora no seu bolso. Apresentamos o celular com uma tela de cinema móvel, um console de jogos empolgante e um dispositivo multitarefa com várias janelas. Além disso, uma câmera poderosa e profissional. Tudo isso na palma da sua mão
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/spiderman.jpg" alt="nova skin" />
+                    <header>
+                        <time>13/07/2022 às 12:35</time>
+                    </header>
+                    <h3>Novo visual do PS5 é revelado</h3>
+                    <p>
+                        Marvel's Spider-Man 2 revela novo trailer na San Diego Comic-Con 2023 e anuncia um PlayStation 5 temático do herói, disponível em 1º de setembro nos EUA. O jogo da Insomniac Games trará Peter Parker e Miles Morales enfrentando vilões como Kraven, Venom e o Senhor Negativo, com lançamento marcado para 20 de outubro no PlayStation 5. Ainda não há previsão para o console temático no Brasil.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/tabs9.jpg" alt="Galaxy Tab s9 ultra" />
+                    <header>
+                        <time>13/07/2022 às 12:35</time>
+                    </header>
+                    <h3>Samsung Galaxy Tab S9</h3>
+                    <p>
+                        A Samsung anunciou a linha Galaxy Tab S9, que inclui os modelos S9, S9+ e S9 Ultra. Eles apresentam telas AMOLED Dinâmica 2X, o poderoso chipset Snapdragon 8 Gen 2 e S Pen com classificação IP68. A linha é focada em entretenimento e criatividade, oferecendo uma experiência envolvente em dispositivos leves e finos. Além disso, a Samsung enfatiza seu compromisso com a sustentabilidade e atualizações de software de longo prazo. Os preços sugeridos no Brasil variam de R$ 7.499 a R$ 11.499.
                     </p>
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
