--- a/css/index2.html
+++ b/css/index2.html
@@ -111,7 +111,7 @@
         </div>
     </section>
     <section id="games">
-        <div id="container">
+        <div class="container">
             <h2>Games</h2>
             <div class="articles">
                 <article>
@@ -151,7 +151,7 @@
         </div>
     </section>
     <section id="tecnologia">
-        <div id="container">
+        <div class="container">
             <h2>Tecnologia</h2>
             <div class="articles">
                 <article>
